src/test/deca/extension/codegen/valid/test_decl_tableau_class_2d.deca
// Description:
// Test la declaration de tableau 2d
// pour une classe, test d'acces au element 
// d'une classe à partir d'un tableau, test d'assign d'un
// champ de classe dans un tableau
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result 
// Historique:
//    cree le 01/01/2023

class Point2D {
    int x ; // Abscisse
    int y ; // Ordonnee
    // Deplace ce point
    // de a en diagonale.
    void diag(int a) {
        x = x + a;
        y = y + a;
    }
}

class Point3D extends Point2D {
    int z; // Hauteur
    void diag(int a) {
        x = x + a;
        y = y + a;
        z = z + a;
    }
}

{
    Point2D point2d = new Point2D();
    Object[][] tableauObjet = new Object[1][2];
    Point2D[][] listeDePoint2d;
    listeDePoint2d = new Point2D[9][4];
    listeDePoint2d[2][3] = new Point2D();
    listeDePoint2d[2][3].x = 5;
    listeDePoint2d[2][3].y = 5;
    println(listeDePoint2d[2][3].x);
    println(listeDePoint2d.size1D);
    println(listeDePoint2d.size2D);

}