src/test/deca/extension/codegen/invalid/test_initialisation_invalid.deca
// Description:
// Test la declaration de matrice avec un indice negatif
// Resultats:
//  Le resulat attendu est dans le fichier avec "ce_nom"_output_expected au le dossier ./result
// Historique:
//    cree le 01/01/2023


{
    int[] x = new int[-1]; 
}